first commit, add of title and tests

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <title>CSS/HTML Workshop with Convargo</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+  <h1> Welcome to the invoices Convargo's simulator </h1>
+  
+  <p> Here your can enter the information of the trucker </p>
     <div id="trucker">
       <input class="name" type="text" placeholder="Trucker name"/>
       <input class="price-by-km" type="number" placeholder="Price by km"/>
